# ml-profiler

./: .gitignore  pyproject.toml
eda/: README.md  __init__.py
eda/bivariate/: correlations.py  cross_tabulations.py  scatter_plots.py
eda/data_quality/: data_types.py  duplicates.py  missing_values.py  outliers.py
eda/multivariate/: clustering.py  feature_interactions.py  pca.py
eda/temporal/: seasonality.py  time_series.py  trends.py
eda/univariate/: categorical_analysis.py  distributions.py  summary_stats.py
eda/utils/: config.py  constants.py  helpers.py
eda/visualization/: dashboards.py  plots.py  reports.py
plots/: __init__.py  bivariate.py  correlation_analyzer.py  models.py  multivariate.py  univariate.py
preprocessing/: imputer.py  main.py  missing_value_analysis.py
utils/: core.py  meta.py  mixins.py
